Revision history for HTML::Mason.

An HTML version of this file, complete with links to documentation, is
available at http://www.masonhq.com/code/history.html.

** denotes an incompatible change

1.36

[ BUG FIXES ]

- Under mod_perl 2, if decline_dirs was false and a directory was
  requested, you got a "Use of uninitialized value" warning from
  ApacheHandler in your logs. Reported by Ogden Nefix.

- HTML::Entities is now a prereq. Not requiring it made for various
  weird gyrations in the tests that didn't seem to work all the time,
  causing various failures.

- Request::CGIHandler->exec() now returns the return value from
  executing the component, just like a normal Request. Reported by
  Adrian Irving-Beer.

[ ENHANCEMENTS ]

- Added a new Compiler::ToObject parameter,
  named_component_subs. Turning this on makes it possible to profile
  components.

- Added a new Request parameter, component_error_handler. This can be
  set to change how component compilation and runtime errors are
  handled. It can also be set to false to just let errors go
  unhandled, which could speed up apps that throw a lot of non-object
  exceptions.


1.35  Oct 17, 2006

[ BUG FIXES ]

- Version 1.34 introduced a bug that caused corruption of the callers
stack when a component call with content was used.

- When Mason tried to load a package required for a feature (like
Cache::Cache for $m->cache) and this failed, the error message would
say something like "Can't locate Cache::Cache". However, the real
error could be that Cache::Cache was present, but a module required by
Cache::Cache was not. Now we report the real missing module.

- Some people saw a spurious test failure in 05-request.t. RT #22099.

- Added Module::Build to the build_requires prereqs.


1.34  Oct 14, 2006

[ BUG FIXES ]

- List Module::Build as a build prereq in the Build.PL, so it shows up
in META.yml. Reported by Colin Henein. RT #22097.

- Apache::Request and mod_perl{1,2} will no longer show up as prereqs